# aqtxmlparser

./: .flake8  Changelog.rst  MANIFEST.in  pyproject.toml
aqt/: xmlparser.py
tests/: test_parse_windows.py
tests/data/: windows-622-android-update.xml
