[project]
name = "aqtxmlparser"
requires-python = ">=3.7"
description = "parser library for Qt download site's Update.xml"
readme = "README.rst"
license = {text = "MIT License"}
authors = [
    {name = "Hiroshi Miura", email = "miurahr@linux.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
      'importlib_metadata;python_version<"3.8"',
]
keywords = ['xml', 'aqt', 'solver', 'dfs']
dynamic = ["version"]

[project.optional-dependencies]
test = [
      "pytest",
      "pytest-cov",
      "pyannotate",
      "coverage[toml]>=5.2",
      "coveralls>=2.1.1",
]
docs = [
      "sphinx>=5.0",
      "docutils",
]
check = [
      "mypy>=0.940",
      "mypy_extensions>=0.4.1",
      "check-manifest",
      "flake8",
      "flake8-black",
      "flake8-deprecated",
      "isort>=5.0.3",
      "pygments",
      "readme-renderer",
      "twine",
]

[project.urls]
Homepage = "https://aqtxmlparser.readthedocs.io/"
Documentation = "https://aqtxmlparser.readthedocs.io/en/stable/"
"Bug Tracker" = "https://github.com/miurahr/aqtxmlparser/issues"
Source = "https://github.com/miurahr/aqtxmlparser"
Changelog = "https://github.com/miurahr/aqtxmlparser/blob/master/Changelog.rst"

[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=6.4.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "aqt/xmlparser/version.py"
write_to_template = """
__version__ = \"{version}\"
"""
tag_regex = "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"

[tool.coverage.run]
branch = true
parallel = true
source = ["aqt"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["if __name__ == .__main__.:", "pragma: no-cover", "@abstract", "def __repr__"]

[tool.black]
line-length = 125
target-version = ['py38']

[tool.isort]
known_first_party = ['aqt']
known_third_party = ["docutils", "flake8", "pyannotate_runtime", "pytest", "pytz", "setuptools", "sphinx", "yaml"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 125

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
show_column_numbers = true

[tool.check-manifest]
ignore = ["aqt/xmlparser/version.py", ".readthedocs.yml", "codecov.yml"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = "test*.py"
norecursedirs = [".git", "_build", "tmp", ".eggs"]
timeout = 480
markers = [
    "basic: mark a test as a basic feature test.",
    "unit: mark a test as an unit test.",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = mypy, check, pypy3, py{36,37,38,39,310,311}, docs

[testenv]
basepython =
    py36:   python3.6
    py37:   python3.7
    py38:   python3.8
    py39:   python3.9
    py310:  python3.10
    py311:  python3.11
    pypy3:  pypy3
    docs:   python3.8
    check:  python3.8
    mypy:   python3.8
passenv = GITHUB_* PYTEST_ADDOPTS COVERALLS_*
extras = test
commands =
    python -m pytest -vv
depends =
    pypy3,py{36,37,38,39,310,311}: clean, check

[testenv:py38]
extras = test

[testenv:pypy3]
extras = test

[testenv:mypy]
extras = check
commands = mypy solver

[testenv:check]
extras = check
ignore_errors=true
commands =
    flake8 aqt
    isort --quiet --check-only --diff aqt/*.py tests setup.py
    python setup.py sdist
    twine check dist/*
    check-manifest {toxinidir}

[testenv:clean]
deps = coverage[toml]>=5.2
skip_install = true
commands = coverage erase

[testenv:coveralls]
deps =
    coveralls
skip_install = true
commands =
    coveralls []

[testenv:docs]
extras = docs
commands =
    sphinx-build {posargs:-E} -b html docs build/docs
    sphinx-build -b linkcheck docs build/docs

[gh-actions]
python =
    3.6: py36
    3.7: py37
    3.8: py38, check, mypy, docs
    3.9: py39
    3.10: py310
    3.11: py311
    pypy-3: pypy3
"""
